Fix series page overflow issue

--- a/cigionline/static/themes/space_series/css/_article_series_page.scss
+++ b/cigionline/static/themes/space_series/css/_article_series_page.scss
@@ -45,6 +45,7 @@ body {
         position: relative;
 
         .swiper-container-series {
+          overflow-x: hidden;
           padding: 0.5em;
 
           .swiper-wrapper {
